# reala-legacy

./: Cargo.toml  README.md  build.rs  config.example.toml  config.example.yaml
.github/workflows/: build.yml
assets/: reala.service
crates/reala/: Cargo.toml
crates/reala/src/: main.rs  relay.rs
crates/reala/src/util/: file.rs  io.rs
src/: cli.rs  config.rs  main.rs  relay.rs  util.rs
src/util/: io.rs
