[package]
name = "reala"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
description = "Simple but powerful Layer 4 proxy server."
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
base64 = "0.22.1"
clap = { version = "4.5", optional = true, features = ["derive"] }
crossfire = { version = "2.1.7", features = ["tokio"] }
humat = "0.3.0"
mimalloc = { version = "0.1.48", optional = true }
notify = "8.2"
num_cpus = "1.17"
portable-atomic = "1.11"
proxy-protocol-codec = "0.3.1"
quanta = "0.12.6"
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }
thiserror = "2.0"
tokio = { version = "1.48", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-uni-stream = "0.0.9"
toml = { version = "0.9.8", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter", "parking_lot"] }
uni-addr = { version = "0.3.4", default-features = false, features = ["feat-serde"] }
wrapper-lite = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-splice2 = "0.3.2"
tokio-uni-stream = { version = "0.0.9", features = ["splice"] }

[build-dependencies]
chrono = "0.4.42"

[patch.crates-io]
# tokio-uni-stream = { path = "../tokio-uni-stream" }

[features]
# Default features
default = ["mimalloc", "cli"]

# Enable `mimalloc` as the global allocator.
mimalloc = ["dep:mimalloc"]

# Enable command line interface.
#
# This will introduce ~500 KiB binary size overhead.
cli = ["dep:clap"]

[lints]
workspace = true
